tests/invalid_programs/for1.jas
// Expect identifier after for keyword.

for in 1..10 { println(42); }
